--- a/style.css
+++ b/style.css
@@ -1,41 +1,29 @@
 .frame {
   background-color: #050505;
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  width: 100%;
+  align-items: center; /* Center vertically */
+  height: 100vh; /* Set the height of the frame to 100% of the viewport height */
 }
 
 .frame .div {
   background-color: #050505;
   width: 1920px;
   height: 1080px;
-  position: relative;
 }
 
 .frame .text-wrapper {
-  position: absolute;
-  width: 468px;
-  top: 415px;
-  left: 726px;
   font-family: "Inter-Regular", Helvetica;
   font-weight: 400;
   color: #ffffff;
   font-size: 128px;
-  letter-spacing: 0;
-  line-height: normal;
-  white-space: nowrap;
+  text-align: center; /* Center the text horizontally */
 }
 
 .frame .p {
-  position: absolute;
-  width: 562px;
-  top: 581px;
-  left: 726px;
   font-family: "Inter-Regular", Helvetica;
   font-weight: 400;
   color: #fffcfc;
   font-size: 32px;
-  letter-spacing: 0;
-  line-height: normal;
+  text-align: center; /* Center the text horizontally */
 }
