--- a/style.css
+++ b/style.css
@@ -1,29 +1,54 @@
 .frame {
   background-color: #050505;
   display: flex;
+  flex-direction: row;
   justify-content: center;
-  align-items: center; /* Center vertically */
-  height: 100vh; /* Set the height of the frame to 100% of the viewport height */
+  width: 100%;
 }
 
-.frame .div {
+.frame .frame-wrapper {
   background-color: #050505;
   width: 1920px;
   height: 1080px;
 }
 
+.frame .div {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 10px;
+  position: relative;
+  top: 407px;
+  left: 679px;
+}
+
 .frame .text-wrapper {
+  position: relative;
+  width: 467px;
+  height: 148px;
+  margin-top: -2px;
+  margin-left: -1px;
+  -webkit-text-stroke: 1px #000000;
   font-family: "Inter-Regular", Helvetica;
   font-weight: 400;
   color: #ffffff;
   font-size: 128px;
-  text-align: center; /* Center the text horizontally */
+  letter-spacing: 0;
+  line-height: normal;
+  white-space: nowrap;
 }
 
 .frame .p {
+  position: relative;
+  width: 562px;
+  height: 61px;
+  margin-left: -1px;
+  -webkit-text-stroke: 1px #000000;
   font-family: "Inter-Regular", Helvetica;
   font-weight: 400;
   color: #fffcfc;
   font-size: 32px;
-  text-align: center; /* Center the text horizontally */
+  letter-spacing: 0;
+  line-height: normal;
 }
