--- a/style.css
+++ b/style.css
@@ -1,52 +1,49 @@
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
 .frame {
-  display: flex;
-  flex-direction: column;
-  height: 982px;
-  align-items: flex-end;
-  justify-content: center;
-  gap: 10px;
-  padding: 362px 456px;
-  position: relative;
   background-color: #050505;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
 }
 
 .frame .div {
-  display: inline-flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  gap: 10px;
-  padding: 0px 76px;
+  background-color: #050505;
+  width: 100vw;
+  height: 100vh;
   position: relative;
-  flex: 0 0 auto;
 }
 
 .frame .text-wrapper {
-  position: relative;
-  width: 470px;
-  height: 106px;
-  margin-top: -2px;
-  margin-left: -1px;
-  -webkit-text-stroke: 1px #000000;
+  position: absolute;
+  width: 40%;
+  top: 38%;
+  left: 30%;
   font-family: "Inter-Regular", Helvetica;
   font-weight: 400;
   color: #ffffff;
-  font-size: 96px;
+  font-size: 5vw; /* Using vw for responsive font size */
   letter-spacing: 0;
   line-height: normal;
   white-space: nowrap;
 }
 
 .frame .p {
-  position: relative;
-  width: 470px;
-  height: 54px;
-  margin-left: -1px;
-  -webkit-text-stroke: 1px #000000;
+  position: absolute;
+  width: 45%;
+  top: 56%;
+  left: 30%;
   font-family: "Inter-Regular", Helvetica;
   font-weight: 400;
   color: #fffcfc;
-  font-size: 24px;
+  font-size: 1.5vw; /* Using vw for responsive font size */
   letter-spacing: 0;
   line-height: normal;
 }
