--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body, html {
   height: 100%;
   margin: 0;
+  overflow: hidden; /* Prevent scrolling */
 }
 
 .frame {
@@ -11,7 +12,6 @@ body, html {
   width: 100%;
   height: 100%;
   margin: 0;
-  overflow: hidden;
 }
 
 .frame .div {
