--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body, html {
   font-family: "Inter-Regular", Helvetica;
   font-weight: 400;
   color: #ffffff;
-  font-size: 5vw; /* Using vw for responsive font size */
+  font-size: 96px; /* Using vw for responsive font size */
   letter-spacing: 0;
   line-height: normal;
   white-space: nowrap;
@@ -43,7 +43,7 @@ body, html {
   font-family: "Inter-Regular", Helvetica;
   font-weight: 400;
   color: #fffcfc;
-  font-size: 1.5vw; /* Using vw for responsive font size */
+  font-size: 20px; /* Using vw for responsive font size */
   letter-spacing: 0;
   line-height: normal;
 }
